--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,5 +28,12 @@ jobs:
         run: npm ci
       - name: Build project
         run: npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
       - name: Deploy
         run: echo "Deploying ..."
